🐆🎐 Checkpoint ./menujs.html:10328230/301

--- a/menujs.html
+++ b/menujs.html
@@ -140,19 +140,19 @@ function hidedeco(){
         </script>
         </head>
         <body>
-           <div id="menu" onclick="showMenu()" onmouseover="hideMenu()">
+           <div id="menu" onclick="showMenu()" onmouseenter="hideMenu()">
            <div id="bar"> </div>
            <div id="bar"> </div>
            <div id="bar"> </div>
            </div>
            <div align="center" id="menublock">
            <!--links section-->
-               <a onmouseover="deco(); num0()" onmouseout="hidedeco()" href="#" > link 1</a><br></br>
-               <a href="#" onmouseover="deco(); num1()" onmouseout="hidedeco()" > My Profile </a><br></br>
-               <a href="#" onmouseover="deco(); num2()" onmouseout="hidedeco()"> Community</a><br></br>
-               <a href="#" onmouseover="deco(); num3()" onmouseout="hidedeco()"> Q and A</a><br></br>
-               <a href="#" onmouseover="deco(); num4()" onmouseout="hidedeco()"> Get in Touch</a><br></br>
-               <a href="#" onmouseover="deco(); num5()" onmouseout="hidedeco()"> Competitions</a><br></br>
+               <a href="#" onmouseover="num0(); deco()" onmouseout="hidedeco()" > link 1</a><br></br>
+               <a href="#" onmouseover="num1(); deco()" onmouseout="hidedeco()" > My Profile </a><br></br>
+               <a href="#" onmouseover="num2(); deco()" onmouseout="hidedeco()"> Community</a><br></br>
+               <a href="#" onmouseover="num3(); deco()" onmouseout="hidedeco()"> Q and A</a><br></br>
+               <a href="#" onmouseover="num4(); deco()" onmouseout="hidedeco()"> Get in Touch</a><br></br>
+               <a href="#" onmouseover="num5(); deco()" onmouseout="hidedeco()"> Competitions</a><br></br>
 
            </div>
         </body>
