🐄🔮 Checkpoint ./README.md copy:10328230/963 ./single entry.html:10328230/103 ./singleentry.html:10328230/21 ./index.html:10328230/1

--- a/singleentry.html
+++ b/singleentry.html
@@ -52,7 +52,7 @@ a:visited{
 </style></head>
 <body>
 <!--by typewriterXXX submited at: 20:38:08 on: Sun Dec 15 2019 A little interactive poem play around with it by hovering over the text and clicking the buttons :)-->
-<a target="_blank" href="/Users/Y-S/Desktop/Coding Platform/single entry.html">view full</a>
+<a target="_blank" href="https://web-code-renderer.glitch.me/singleentry.html">view full</a>
 <p name="server"  id="number"> 0 </p>
 <!-- <img id="icon" src="" > -->
 <button id="loves"  onclick="love()"> appriciate</button>
