❣️🚣 Checkpoint ./index.html:10328230/496 ./style.css:10328230/1803

--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
   </script>
 </head>
 <body>
-<p  id="archives"><a href="#entries">archives</a></p>
-<p  id="about1">about</p>
 <p  id="date"></p>
 <!--DATE-->
 <script>
@@ -55,7 +53,7 @@ document.getElementById("date").innerHTML = d.toDateString();
 </script>
 
 <p  id="time"></p>
-<p id="date"></p>
+<p id="date" align="left"></p>
 <script>
 //Dynamic Timer
   function checkTime(i) {
@@ -80,15 +78,6 @@ t = setTimeout(function() {
 }
 startTime();
 </script>
-
-<h1 id="title"> Code publishing platform </h1>
-<div id="rect0"></div>
-<p id="about"> An open source experimental web project,
-below you will find our editor for creating content.
-you can easily preview and test it in the editor, anyone is welcome to use it.
-When you finish just click the publish button to send it for revision and publication on the page.
-Have fun participating in the project!
- </p>
 
 
 
