🎑🛳 Checkpoint ./index.html:10328230/751 ./style.css:10328230/40

--- a/index.html
+++ b/index.html
@@ -83,14 +83,19 @@ startTime();
 
 <div id="editor" style="background-color: rgb(19, 19, 19);">
 <pre id="editor" style="color:white">
-  The program is made for creating HTML elements and CSS animations, it does also support JS.
+  The program is made for creating HTML 
+  elements and CSS animations, 
+  it does also support JS.
 
-  Delete this text and write your html here for syntax highlighting and correction or in the left-top section for execution,
-  you can also drag and drop the selected code between windows. To refresh the render press the button at top-left.
-  Try to resize the top windows to scale the content by grabbing them by their right-bottom corner.
-  Below the editor you will find the publishing interface, where you can submit the description of your code, your nickname,
-  launch a full screen preview, and send the code for publication on the page.
-
+  Delete this text and write your html 
+  here for syntax highlighting and correction
+  then copy and paste it below and click
+  the button for execution, or to refresh.
+  
+  Try to resize the two windows to scale 
+  the content by grabbing them 
+  by their right-bottom corner.
+ 
 </pre>
 </div>
 
@@ -226,7 +231,7 @@ startTime();
 </script>
 
 <button id="b2" onclick="render()"  >paste below & click to run!
-You can prepare your code in the bottom section.</button>
+</button>
 <div id="output"> </div>
 
 <!-- CODE RENDER IFRAME - OUTPUT1-->
