👛🖖 Checkpoint ./style.css:10328230/193 ./index.html:10328230/225

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ startTime();
   Delete this text and write your html 
   here for syntax highlighting and correction
   then copy and paste it below and click
-  the button for execution, or to refresh.
+  the button to render, or to refresh
+  your code.
+  
   
   Try to resize the two windows to scale 
   the content by grabbing them 
@@ -230,7 +232,7 @@ startTime();
     editor.session.setMode("ace/mode/html");
 </script>
 
-<button id="b2" onclick="render()"  >paste below & click to run!
+<button id="b2" onclick="render()"  >paste to the left & click to run!
 </button>
 <div id="output"> </div>
 
