⛵️📠 Checkpoint ./style.css:10328230/94 ./index.html:10328230/42

--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@ startTime();
 
 
 
-<div id="editor" style="background-color: rgb(19, 19, 19);">
+<div id="aceeditor" style="background-color: rgb(19, 19, 19);">
 <pre id="editor" style="color:white">
-  The program is made for creating HTML 
+  The web app is made for creating HTML 
   elements and CSS animations, 
-  it does also support JS.
+  it does also support JS with
+  some restrictions.
 
   Delete this text and write your html 
   here for syntax highlighting and correction
