🚙🎯 Checkpoint ./index.html:10328230/1120

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
    iframe{
      resize: both;
-     zoom: 0.95;
+     zoom: 0.90;
+     width: 91% !important;
+     padding-left:7%;
      -moz-transform:scale(0.95);
      -moz-transform-origin: 0 0;
      -webkit-transform:scale(0.95;
