--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     #time{
       color: #333333;
       position: absolute;
-      right:2%;
+      top: 30px;
+      left:2%;
       font-family: 'Bangers', cursive;
       font-size: 15px;
       z-index: 200;
@@ -68,7 +69,7 @@
 
     }
     
-    #editor {
+    #aceEditor {
         padding-top: 10px;
         position: absolute;
         top: 81%;
@@ -76,7 +77,7 @@
         left: 0px;
         right: 0px;
         width: 100%;
-        height: 40%;
+        height: 100%;
 
     }
 
@@ -84,15 +85,16 @@
       position: absolute;
       background-color: black;
       color: white;
-      top:120%;
-      height: 51%;
+      top:0%;
+      height: 30px;
       z-index: 221;
-      width:29.5%;
+      width:100px;
       right:0px;
       font-family: courier;
     }
 #b2:hover{
   color: cyan;
+  cursor: pointer;
 }
     textarea{
       border-width: 0px;
@@ -106,7 +108,7 @@
       left:0%;
       width: 110%;
       left:-5%;
-      height: 72%;
+      height: 70%;
       
       right: 23%;
       overflow: scroll;
@@ -140,7 +142,7 @@
    iframe{
      resize: both;
      zoom: 0.90;
-     width: 95% !important;
+     width: 99% !important;
      padding-left:7%;
      -moz-transform:scale(0.95);
      -moz-transform-origin: 0 0;
@@ -338,8 +340,8 @@ startTime();
 
 
 
-<div id="aceEditor" style="background-color: rgb(19, 19, 19);">
-<pre id="editor" style="color:white">
+<div id="aceEditor" >
+&lt;pre&gt; 
   The web app is made for creating HTML 
   elements and CSS animations, 
   it does also support JS with
@@ -356,7 +358,7 @@ startTime();
   the content by grabbing them 
   by their right-bottom corner.
  
-</pre>
+&lt;/pre&gt;
 </div>
 
 
@@ -489,7 +491,7 @@ startTime();
     editor.session.setMode("ace/mode/html");
 </script>
 
-<button id="b2" onclick="render()"  >paste to the left & click to run!
+<button id="b2" onclick="render()"  >build
 </button>
 <div id="output"> </div>
 
@@ -498,7 +500,7 @@ startTime();
 </iframe>
 
 <!-- USER INPUT - USER CODE -->
-<textarea id="box1" draggable="true">
+<textarea id="box1" style="visibility:hidden" draggable="true">
 
 <!--example-->
 <html>
