--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     #time{
       color: #333333;
       position: absolute;
-      top: 30px;
+      top: 25px;
       left:2%;
       font-family: 'Bangers', cursive;
       font-size: 15px;
@@ -91,10 +91,13 @@
       width:100px;
       right:0px;
       font-family: courier;
+      border-radius: 10px;
+      
     }
 #b2:hover{
   color: cyan;
   cursor: pointer;
+  border-radius: 20px;
 }
     textarea{
       border-width: 0px;
@@ -143,7 +146,7 @@
      resize: both;
      zoom: 0.90;
      width: 99% !important;
-     padding-left:7%;
+     padding-left:5%;
      -moz-transform:scale(0.95);
      -moz-transform-origin: 0 0;
      -webkit-transform:scale(0.95;
