⚡️✍️ Checkpoint ./index.html:10328230/33593

--- a/index.html
+++ b/index.html
@@ -344,7 +344,87 @@ startTime();
 
 
 <div id="aceEditor" >
-&lt;pre&gt; 
+  &lt;&gt;Welcome to the online code editor.
+  It supports html, css and javascript.
+  Below is an example-starter code you can edit.
+  
+  
+  
+&lt;!--example--&gt;
+
+&lt;head&gt;
+  &lt;script&gt;
+  function play(){
+          var audio = new Audio('https://freesound.org/data/previews/338/338986_5106192-lq.mp3');
+          audio.play();
+        }
+
+  &lt;/script&gt;
+  &lt;style&gt;
+  pre{
+  background-color: rgba(255,255,255,0.8);
+  max-width: 45%;
+  margin-left: 20px;
+  }
+  body {
+    font-family:monospace;
+    font-style: normal;
+    font-variant: normal;
+    font-size:13.3px;
+  }
+  @-webkit-keyframes change {
+    0% { transform: scale(1); }
+    50% { transform: scale(2); }
+    100% { transform: scale(1); }
+
+  }
+  @-webkit-keyframes change1 {
+    0%, 12.66%, 100% { transform: translate3d(0, 0, 0); }
+    16.66%, 29.32% { transform: translate3d(0, 155%, 0); }
+    33.32%,45.98% { transform: translate3d(0, 550%, 0); }
+    49.98%,62.64% { transform: translate3d(0, 1500%, 0); }
+    66.64%,79.3% { transform: translate3d(0, 550%, 0); }
+    83.3%,95.96% { transform: translate3d(0, 155%, 0); }
+  }
+  h1{
+    font-size: 35px;
+    animation: change 60s infinite;
+    margin-top: 50px;
+    color: white;
+    font-family: courier new;
+    z-index: 100;
+  }
+  h1:hover {
+    font-size: 35px;
+    color: black;
+    animation: change 60s infinite;
+    margin-top: 50px;
+  }
+  p{
+    animation: change1 10s infinite;
+    position: relative;
+    font-family: courier new;
+
+  }
+
+
+  #bg {
+    position: absolute;
+    top: 0%;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+  }
+  &lt;/style&gt;
+&lt;/head&gt;
+&lt;div style="width:100%;height:100%;"&gt;
+&lt;h1 id="heading" onmouseenter="play()" align="center" &gt;How are you &lt;a style="color:cyan"&gt; today?&lt;/a&gt; &lt;/h1&gt;
+
+  &lt;p align="center" style="color:white;margin-left: 15%" &gt; HTML IDE-v2.1 &lt;/p&gt;
+ 
+  &lt;img id="bg" src="https://4.bp.blogspot.com/-qoEahTAjQEg/Ud6FKsRRRnI/AAAAAAAABPU/X71q5Kig3Vk/s1600/Sky+Anime+Landscape+36.png"/&gt;
+
+ &lt;pre&gt; 
   The web app is made for creating HTML 
   elements and CSS animations, 
   it does also support JS with
@@ -362,6 +442,31 @@ startTime();
   by their right-bottom corner.
  
 &lt;/pre&gt;
+
+
+
+&lt;/div&gt;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 
@@ -494,7 +599,7 @@ startTime();
     editor.session.setMode("ace/mode/html");
 </script>
 
-<button id="b2" onclick="render()"  >build
+<button style="position:fixed" id="b2" onclick="render()"  >build
 </button>
 <div id="output"> </div>
 
@@ -504,6 +609,9 @@ startTime();
 
 <!-- USER INPUT - USER CODE -->
 <textarea id="box1" style="visibility:hidden" draggable="true">
+
+  
+
 
 
 
