👛🌠 Checkpoint ./index.html:10328230/15

--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@ startTime();
 
 
 <div id="aceEditor" >
-  &lt;&gt;Welcome to the online code editor.
+  &lt;div&gt;Welcome to the online code editor.
   It supports html, css and javascript.
   Below is an example-starter code you can edit.
-  
+  &lt;/div&gt;
   
   
 &lt;!--example--&gt;
