⏰🎀 Checkpoint ./index.html:10328230/163

--- a/index.html
+++ b/index.html
@@ -344,13 +344,13 @@ startTime();
 
 
 <div id="aceEditor" >
-  &lt;div&gt;Welcome to the online code editor.
+ &lt;!-- &lt;div&gt;Welcome to the online code editor.
   It supports html, css and javascript.
   Below is an example-starter code you can edit.
-  &lt;/div&gt;
+  &lt;/div&gt; --&gt;
   
   
-&lt;!--example--&gt;
+&lt;!--example // for the purpose of root html entietes have been placed, you can use normal tags from now on in the editor--&gt;
 
 &lt;head&gt;
   &lt;script&gt;
