👯🍕 Checkpoint ./index.html:10328230/124

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ startTime();
   &lt;/div&gt; --&gt;
   
   
-&lt;!--example // for the purpose of root html entietes have been placed, you can use normal tags from now on in the editor--&gt;
+&lt;!--example starter code--&gt;
 
 &lt;head&gt;
   &lt;script&gt;
