🚴🦀 Checkpoint ./index.html:10328230/13

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       height: 30px;
       z-index: 221;
       width:100px;
-      right:0px;
+      left:200px;
       font-family: courier;
       border-radius: 10px;
       
