--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
       position: absolute;
       background-color: black;
       color: white;
-      top:0%;
+      bottom:1%;
       height: 30px;
       z-index: 221;
       width:100px;
-      left:200px;
+      right:1%;
       font-family: courier;
       border-radius: 10px;
       
